--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,29 +2,24 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="140"
+    android:viewportHeight="140">
+  <path
+      android:pathData="M0,0h140v140h-140z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="70"
+          android:startY="215.88"
+          android:endX="193.79"
+          android:endY="144.2"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFAE89FE"/>
+        <item android:offset="0.5" android:color="#FFE3A7FF"/>
+        <item android:offset="1" android:color="#FFFCDAFF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M86.13,63.79C96.64,62.87 98.8,57.95 95.71,53.34C90.15,45.06 77.88,41.8 65.5,45.54C49.92,50.26 39.61,64.58 42.48,77.55C45.34,90.51 60.3,97.2 75.88,92.49C82.64,90.44 88.41,86.59 92.54,81.81C94.21,79.89 94.78,73.93 87.06,74.24C78.83,74.57 77.69,64.54 86.13,63.79ZM83.45,52.55C84.12,51.89 85,51.47 85.93,51.38C86.87,51.29 87.82,51.52 88.6,52.05C89.38,52.57 89.96,53.34 90.24,54.24C90.51,55.14 90.46,56.1 90.1,56.97C89.74,57.84 89.09,58.56 88.26,59C87.43,59.44 86.47,59.59 85.54,59.4C84.62,59.22 83.78,58.72 83.19,58C82.59,57.27 82.26,56.36 82.26,55.43C82.26,54.35 82.69,53.31 83.46,52.55H83.45ZM49,65.87C49.22,65.21 49.63,64.64 50.18,64.21C50.73,63.78 51.39,63.53 52.09,63.48C52.78,63.43 53.48,63.59 54.08,63.93C54.69,64.27 55.18,64.79 55.49,65.41C55.8,66.03 55.92,66.72 55.84,67.41C55.75,68.1 55.46,68.75 55.01,69.27C54.55,69.79 53.95,70.17 53.28,70.36C52.61,70.54 51.89,70.52 51.23,70.3C50.35,70.01 49.62,69.38 49.2,68.55C48.78,67.71 48.72,66.75 49.01,65.87H49ZM55.74,81.99C55.29,82.47 54.71,82.8 54.06,82.94C53.42,83.09 52.75,83.04 52.13,82.81C51.51,82.57 50.98,82.16 50.6,81.63C50.22,81.09 50,80.46 49.99,79.8C49.97,79.14 50.15,78.5 50.5,77.94C50.85,77.38 51.36,76.94 51.96,76.68C52.56,76.41 53.23,76.32 53.88,76.43C54.53,76.54 55.14,76.84 55.61,77.3C56.26,77.9 56.63,78.74 56.65,79.62C56.68,80.5 56.35,81.35 55.74,81.99ZM62.47,59.92C61.67,60.44 60.7,60.62 59.77,60.45C58.83,60.27 58,59.74 57.45,58.97C56.89,58.21 56.65,57.25 56.78,56.32C56.91,55.38 57.4,54.52 58.14,53.93C58.94,53.42 59.9,53.23 60.84,53.41C61.77,53.59 62.6,54.11 63.16,54.88C63.72,55.65 63.95,56.6 63.83,57.54C63.7,58.48 63.21,59.33 62.47,59.92ZM68.91,52.92C68.82,52.16 68.96,51.39 69.31,50.71C69.66,50.03 70.2,49.47 70.88,49.09C71.55,48.72 72.32,48.55 73.08,48.62C73.85,48.68 74.58,48.96 75.18,49.44C75.79,49.91 76.24,50.56 76.47,51.29C76.71,52.02 76.72,52.8 76.51,53.53C76.3,54.27 75.88,54.93 75.29,55.43C74.7,55.92 73.98,56.23 73.22,56.32C72.71,56.38 72.2,56.34 71.71,56.2C71.21,56.06 70.75,55.83 70.35,55.51C69.95,55.2 69.62,54.8 69.37,54.36C69.12,53.91 68.96,53.43 68.91,52.92V52.92ZM80.77,81.95C80.77,83.09 80.37,84.2 79.65,85.08C78.92,85.96 77.91,86.57 76.78,86.79C75.66,87.01 74.49,86.84 73.48,86.3C72.47,85.76 71.68,84.89 71.24,83.84C70.81,82.78 70.75,81.61 71.08,80.52C71.42,79.43 72.12,78.49 73.07,77.85C74.03,77.22 75.17,76.94 76.31,77.05C77.45,77.16 78.52,77.67 79.33,78.48C80.25,79.4 80.77,80.65 80.77,81.95V81.95Z"
+      android:fillColor="#ffffff"/>
 </vector>
