--- a/app/src/main/res/drawable/gradient_action.xml
+++ b/app/src/main/res/drawable/gradient_action.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+        <gradient
+            android:type="linear"
+            android:angle="45"
+            android:startColor="#AE89FE"
+            android:centerColor="#E3A7FF"
+            android:endColor="#FCDAFF"/>
+        <corners android:radius="100dp" />
+
+</shape>
