--- a/app/src/main/res/drawable/grey_border.xml
+++ b/app/src/main/res/drawable/grey_border.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid
+        android:color="@color/whiteBase"/>
+    <stroke android:color="@color/greyBase"
+        android:width="1dp"/>
+    <corners android:radius="100dp" />
 
-</selector>
+</shape>
