--- a/app/src/main/res/layout/fragment_profile_posts.xml
+++ b/app/src/main/res/layout/fragment_profile_posts.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutFragment">
+    tools:context=".ProfilePostsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="This is the about section" />
+        android:text="This is where posts go"
+        android:textColor="@color/blackBase"
+        android:textSize="16sp" />
 
 </FrameLayout>
