--- a/app/src/main/res/layout/fragment_setup_profilepicture.xml
+++ b/app/src/main/res/layout/fragment_setup_profilepicture.xml
@@ -6,55 +6,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.setupProfilepicture"
     android:id="@+id/fragment_setup_profilepicture">
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
         <ImageView
-            android:layout_marginVertical="20sp"
-            android:layout_width="match_parent"
+            android:id="@+id/imageView3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/step1">
-        </ImageView>
-        <androidx.cardview.widget.CardView
-            android:layout_gravity="center"
-            android:layout_marginVertical="20sp"
-            android:layout_width="250sp"
-            android:layout_height="250sp"
-            app:cardCornerRadius="500sp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/profile_picture">
-            </ImageView>
-        </androidx.cardview.widget.CardView>
+            android:layout_marginBottom="41dp"
+            android:src="@drawable/step1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.051"></ImageView>
+
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/shapeableImageView"
+            android:layout_width="257dp"
+            android:layout_height="258dp"
+            android:src="@drawable/user_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3"
+            app:layout_constraintVertical_bias="0.115"
+            app:shapeAppearanceOverlay="@style/circleImageView" />
+
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10sp"
-            android:text="@string/add_profilepicture"
             android:gravity="center"
-            android:textSize="20sp">
-        </TextView>
+            android:text="@string/add_profilepicture"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
+            app:layout_constraintVertical_bias="0.094" />
+
         <Button
+            android:id="@+id/button"
+            style="@style/ContinueButton"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_marginVertical="20sp"
-            style="@style/ContinueButton"
             android:text="@string/add_picture"
-            android:layout_gravity="center" />
-        <TextView
-            android:id="@+id/skip_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="10sp"
-            android:text="@string/skip"
-            android:textSize="16sp"
-            android:fontFamily="@font/ubuntu"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:linksClickable="true"
-            android:autoLink="all"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintVertical_bias="0.152" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
