--- a/app/src/main/res/layout/fragment_setup_accounttype.xml
+++ b/app/src/main/res/layout/fragment_setup_accounttype.xml
@@ -1,65 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_setup_accounttype"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.setupAccounttype"
-    android:id="@+id/fragment_setup_accounttype">
-    <LinearLayout
+    tools:context=".fragment.setupAccounttype">
+
+
+    <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:layout_marginVertical="20sp"
+        android:src="@drawable/step2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/step2"
-            android:layout_gravity="center"
-            android:layout_marginVertical="20sp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Iam"
-            android:textSize="20sp"
-            android:layout_marginHorizontal="30sp"
-            android:layout_marginVertical="15sp"
-            android:textStyle="bold"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30sp"
-            android:layout_marginVertical="15sp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="138sp"
-                android:layout_height="95sp"
-                android:id="@+id/artist"
-                android:text="@string/an_artist"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:background="@drawable/account_type"/>
-            <Space
-                android:layout_width="25sp"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:layout_width="138sp"
-                android:layout_height="95sp"
-                android:id="@+id/normalUser"
-                android:layout_weight="1"
-                android:text="@string/looking_for_artists"
-                android:gravity="center"
-                android:background="@drawable/account_type" />
-        </LinearLayout>
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/account_type"/>
-        <Button
-            android:layout_width="150sp"
-            android:layout_height="50sp"
-            style="@style/ContinueButton"
-            android:layout_gravity="center"
-            android:layout_marginVertical="20sp"
-            android:text="@string/next"/>
-    </LinearLayout>
-</FrameLayout>
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30sp"
+        android:layout_marginVertical="15sp"
+        android:text="@string/Iam"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="0.05" />
+
+
+    <TextView
+        android:id="@+id/normalUser"
+        android:layout_width="138dp"
+        android:layout_height="95dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/account_type"
+        android:gravity="center"
+        android:text="@string/looking_for_artists"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.076" />
+
+    <TextView
+        android:id="@+id/artist"
+        android:layout_width="138dp"
+        android:layout_height="95dp"
+        android:background="@drawable/account_type"
+        android:gravity="center"
+        android:text="@string/an_artist"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/normalUser"
+        app:layout_constraintHorizontal_bias="0.583"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.076" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/account_type"
+        android:layout_width="371dp"
+        android:layout_height="218dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/artist" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
