--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="button_margin_start">40dp</dimen>
+    <dimen name="button_margin_end">40dp</dimen>
+    <dimen name="button_margin_bottom">232dp</dimen>
+    <dimen name="button_margin_top">36dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
