--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -37,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="120dp"
         android:text="@string/forgot_pwd_2"
         android:textSize="28dp"
         android:textStyle="bold"
@@ -45,25 +44,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView"
         style="@style/Text"
         android:layout_width="296dp"
         android:layout_height="41dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
         android:text="@string/forgot_pwd_2_text"
         android:textColor="@color/purpleBase"
         android:textSize="15dp"
         android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_pwd_2"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="48dp" />
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/EditTextEmail"
-        android:layout_width="328dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="284dp"
-        android:layout_marginEnd="40dp"
+        android:layout_width="294dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="148dp"
         android:background="@drawable/grey_border"
         android:drawableStart="@drawable/at"
         android:drawablePadding="10dp"
@@ -71,9 +70,8 @@
         android:inputType="textEmailAddress"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/buttonSend"
@@ -96,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="205dp"
         android:text="Already have an account ? "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSend" />
@@ -106,7 +104,7 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="205dp"
         android:clickable="true"
         android:text="Log In"
         android:textStyle="bold"
